--- a/Jop_post_system/accounts/templates/accounts/job_details.html
+++ b/Jop_post_system/accounts/templates/accounts/job_details.html
@@ -10,12 +10,28 @@
     <p><strong>Company:</strong> {{ job.company_name }}</p>
     <p><strong>Role:</strong> {{ job.role_required }}</p>
     <p><strong>Address:</strong> {{ job.address }}</p>
+    <p><strong>Company Email:</strong> {{ job.company_email }}</p>
     <p><strong>Posted at:</strong> {{ job.posted_at }}</p>
     <p><strong>Skill Required:</strong> {{ job.skills_required }}</p>
     <p><strong>Experience:</strong> {{ job.experience }}</p>
     <p><strong>Salary:</strong> {{ job.salary }}</p>
     <p><strong>Description:</strong> {{ job.description }}</p>
 
+    {% if error %}
+        <p style="color: red;">{{ error }}</p>
+    {% endif %}
+    {% if success %}
+        <p style="color: green;">{{ success }}</p>
+    {% endif %}
+
+    <form method="post" enctype="multipart/form-data" >
+        {% csrf_token %}
+        <label for="resume">Upload Resume (PDF only):</label><br>
+        <input type="file" name="resume" accept="application/pdf" required><br><br>
+        <button type="submit">Apply</button>
+    </form>
+
+    <br>
     <a href="{% url 'home' %}">Back to Home</a>
 </body>
 </html>
