--- a/Jop_post_system/accounts/templates/accounts/user_profile.html
+++ b/Jop_post_system/accounts/templates/accounts/user_profile.html
@@ -13,6 +13,14 @@
     <p><strong>First Name:</strong> {{ user.first_name }}</p>
     <p><strong>Last Name:</strong> {{ user.last_name }}</p>
 
-    <p><a href="{% url 'home' %}">← Back to Home</a></p>
+    <p>
+        <a href="{% url 'home' %}">← Back to Home</a>
+        |
+        <a href="{% url 'logout' %}">Logout</a>
+    </p>
+
+    {% if user.is_staff or user.is_superuser %}
+        <p><a href="/admin/">Go to Admin Panel</a></p>
+    {% endif %}
 </body>
 </html>
